[metadata]
name = hls_download_client
version = 1.0.3
author = Jordan Bell
author_email = jb419816@gmail.com
description = A powerful video downloading tool
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
